extends Node

@onready var intro_sfx = $IntroSFX
@onready var fireball_sound_sfx = $"Fireball SoundSFX"
@onready var dont_think_you_can_escape_sfx = $"Dont think you can escapeSFX"
@onready var bow_to_your_creator_sfx = $"Bow to your creatorSFX"
@onready var game_over_sfx = $"Game OverSFX"
@onready var how_do_i_deserve_this_sfx = $"How do I deserve thisSFX"
@onready var main_bgm_sfx = $MainBGMSFX
@onready var the_dice_have_fallen_sfx = $"The dice have fallenSFX"
@onready var this_is_not_happening_sfx = $"This is not happeningSFX"
@onready var this_isnt_even_my_final_form_sfx = $"This isnt even my final formSFX"
@onready var still_not_final_form_sfx = $"Still not final formSFX"
@onready var supposed_to_care_sfx = $"Supposed to careSFX"
@onready var you_will_never_reach_the_final_form_sfx = $"You will never reach the final formSFX"
@onready var you_won_sfx = $"You WonSFX"
@onready var anger_will_downfall_sfx = $"Anger will downfallSFX"
@onready var end_is_nigh_sfx = $"END is nighSFX"

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
